--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 54: Will I See You Again? - Thee Sacred Souls
+          Week 55: Cattails - Big Thief
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.0/10</h2>
+            <h2 id="rating">Overall Rating 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7dn4l1TMNiBNa4CYWkBWqF?si=c1e7f4a5b0924de8"
+                    href="https://open.spotify.com/track/1zNLILPGGfMdEnifTrnY3z?si=0fc2862b64264d5d"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=IGgb10A_2c8"
+                    href="https://www.youtube.com/watch?v=dUR-Ad8QcmA"
                     target="_blank"
                     ><center>
                       <img
@@ -141,18 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              This 70's r&b/soul revivial sounds so good with today's recording
-              technology, it's a refreshing and "new" sound transported from an
-              earlier era.
+              This song is very raw and intimate, I love the short bouts of
+              intensive imagery in between choruses. My favorite of which has to
+              be "And i find you ther, in your country flair, middle of the
+              river in a lawn chair, with your wrinkled hands and your silver
+              hair."
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This is one of only two songs I know from this recent hit band,
-              yet the two I do know are quite impressive. This was their
-              earliest single from 2021 that preluded their first record release
-              in August of last year. I guess I will have to give it a listen
-              now! Okay, give this one a listen to jazz up your Sunday and make
-              it a great week!
+              I'm still freaking out about seeing Big Thief in concert this past
+              Tuesday so, of course, I have to throw down one of my favorite Big
+              Thief songs for you guys this week. "Cattails" was my first love
+              of their music; It reminds me of the beauty of my home and family,
+              and to appreciate the natural progression of my life. Adrienne
+              Lenker just so happens to be speaking of her home in Minnesota
+              where I am currently en route via airplane: "Going back home to
+              the Great Lakes. . .". Enjoy this one and think of home in one way
+              or another when you listen. As always, make it a great week!
             </p>
           </div>
         </div>
@@ -186,18 +191,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Ryan Garbe: Ooh La La - Faces
+            Keena Garbe: Everything's Gonna Be Alright - David Lee Murphy
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 10/10</h2>
+              <h2 id="rating">Overall Rating 9.9/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4lJ6YVXQ0jUk5ILu0PSrA4?si=433c835a77784f7a"
+                    href="https://open.spotify.com/track/212BpQ14gz23ewVKFydbVN?si=785198f414044d7a"
                     target="_blank"
                     ><center>
                       <img
@@ -211,7 +216,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=bRukNU3jkIM"
+                    href="https://www.youtube.com/watch?v=KOlrH6d7F58"
                     target="_blank"
                     ><center>
                       <img
@@ -228,20 +233,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Ooh la la lyrics are of a grandpa telling his grandson the ways of
-            women, although alot of the lyrics are hard to make out. Even though
-            some of grandpa's advice/experience may be true, I really don't
-            listen to the lyrics in this song as much as I enjoy the instruments
-            and smooth beat. This is a feel good song that I have been listening
-            to for years and will continue for years to come (my kids will be
-            chuckling), they've been forced to listen for years now! I can
-            listen to ooh la la over and over due to combination of instruments,
-            his voice and the contagious beat. Being picked as celebrity of the
-            week may have been pondering for JR, but picking Ooh La La for me
-            was super easy, one of my most favorite songs ever!
+            I know the assignment is to share your favorite song of the week. I
+            chose to share a song that is so simple in meaning and far from
+            lyrical genius. I remember hearing it several years ago during the
+            most difficult time in my life. It represented hope and a reminder
+            that there is always something to be greatful for. Each and
+            everytime it pops up on the radio(yes, I still listen to the radio),
+            I turn it up loud and give thanks for the gifts in my life. Hope you
+            will do the same❤️
           </p>
-          <p id="celebOverall">Proud father of JR Garbe,</p>
-          <p id="celebOverall">Ryan Garbe</p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
         <div id="celebSotW">
@@ -528,6 +528,11 @@
               <td>53</td>
               <td>TELEKINESIS - Travis Scott</td>
               <td>8.7/10</td>
+            </tr>
+            <tr>
+              <td>54</td>
+              <td>Will I See You Again? - Thee Sacred Souls</td>
+              <td>8.0/10</td>
             </tr>
           </table>
         </div>
