--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 55: Cattails - Big Thief
+          Week 56: Clean - Taylor Swift
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.4/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1zNLILPGGfMdEnifTrnY3z?si=0fc2862b64264d5d"
+                    href="https://open.spotify.com/track/06WgOCf0LV2h4keYXDRnuh?si=bf71f0410b734fa2"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=dUR-Ad8QcmA"
+                    href="https://www.youtube.com/watch?v=IGmMW7JTvuw"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              This song is very raw and intimate, I love the short bouts of
-              intensive imagery in between choruses. My favorite of which has to
-              be "And i find you ther, in your country flair, middle of the
-              river in a lawn chair, with your wrinkled hands and your silver
-              hair."
+              I cannot get enough of the "(Oh-oh, oh-oh)". There's no other
+              context or significance of it really, it just hits my ears in a
+              wonderful way.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I'm still freaking out about seeing Big Thief in concert this past
-              Tuesday so, of course, I have to throw down one of my favorite Big
-              Thief songs for you guys this week. "Cattails" was my first love
-              of their music; It reminds me of the beauty of my home and family,
-              and to appreciate the natural progression of my life. Adrienne
-              Lenker just so happens to be speaking of her home in Minnesota
-              where I am currently en route via airplane: "Going back home to
-              the Great Lakes. . .". Enjoy this one and think of home in one way
-              or another when you listen. As always, make it a great week!
+              It rained last night and this song was playing as I walked home
+              and I would be lying to you all if I didn't do a little footwork
+              right then and there walking east bound on Dwight Avenue. This
+              song was often overlooked by me as some of my all time favorite
+              Taylor Swift songs are on this album, but I have recently found
+              something comforting in the simplicity of the production and the
+              significance of the lyrics. Give this one a summertime listen and
+              make it a great week!
             </p>
           </div>
         </div>
@@ -191,18 +188,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Keena Garbe: Everything's Gonna Be Alright - David Lee Murphy
+            Kinzey: Pasture Child - Dominic Fike
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.9/10</h2>
+              <h2 id="rating">Overall Rating 8.4/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/212BpQ14gz23ewVKFydbVN?si=785198f414044d7a"
+                    href="https://open.spotify.com/track/5APPlPgagEAXjGLIizqSDS?si=79a95e5a588a48d9"
                     target="_blank"
                     ><center>
                       <img
@@ -216,7 +213,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=KOlrH6d7F58"
+                    href="https://www.youtube.com/watch?v=BuUHgchnPJw"
                     target="_blank"
                     ><center>
                       <img
@@ -233,14 +230,18 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I know the assignment is to share your favorite song of the week. I
-            chose to share a song that is so simple in meaning and far from
-            lyrical genius. I remember hearing it several years ago during the
-            most difficult time in my life. It represented hope and a reminder
-            that there is always something to be greatful for. Each and
-            everytime it pops up on the radio(yes, I still listen to the radio),
-            I turn it up loud and give thanks for the gifts in my life. Hope you
-            will do the same❤️
+            I’ve recently been listening to Dominic Fike’s new album on repeat
+            (especially since I saw him in concert!). I could have chosen
+            virtually any song from this album to be my song of the week, but I
+            have a particular love for this one lately. The play-on-words title
+            refers to a childhood crush or lover who is said to have had a
+            sheltered upbringing, but grows up to do big things. Fike reminisces
+            about that relationship in a time before their lives became more
+            complicated, and he introduces an additional sentiment about the way
+            that technology has impacted our lives and interactions with others.
+            The production has a lot of subtle detail, and I really love the
+            guitar parts throughout this whole album. I find this song really
+            sweet and the lyrics always make me smile.
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -533,6 +534,11 @@
               <td>54</td>
               <td>Will I See You Again? - Thee Sacred Souls</td>
               <td>8.0/10</td>
+            </tr>
+            <tr>
+              <td>55</td>
+              <td>Cattails - Big Thief</td>
+              <td>9.4/10</td>
             </tr>
           </table>
         </div>
