--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 56: Clean - Taylor Swift
+          Week 57: Cyclades - Buck Meek
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 8.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/06WgOCf0LV2h4keYXDRnuh?si=bf71f0410b734fa2"
+                    href="https://open.spotify.com/track/5bm4mWrTL3LAewRDiTMQel?si=9c85f1f4f05c4a9b"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=IGmMW7JTvuw"
+                    href="https://www.youtube.com/watch?v=njKwzygKaRY"
                     target="_blank"
                     ><center>
                       <img
@@ -141,20 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I cannot get enough of the "(Oh-oh, oh-oh)". There's no other
-              context or significance of it really, it just hits my ears in a
-              wonderful way.
+              I've never actually heard Buck Meek sing solo until this very
+              song, yet I've seen him play in person for his band Big Thief.
+              This voice of his is not something I would've expected from him by
+              first glance but it makes me smile a lot when I think about it. He
+              also talks about Siskyou and Shasta county in this song!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              It rained last night and this song was playing as I walked home
-              and I would be lying to you all if I didn't do a little footwork
-              right then and there walking east bound on Dwight Avenue. This
-              song was often overlooked by me as some of my all time favorite
-              Taylor Swift songs are on this album, but I have recently found
-              something comforting in the simplicity of the production and the
-              significance of the lyrics. Give this one a summertime listen and
-              make it a great week!
+              Last night Google News greeted me with Pitchfork's review of Buck
+              Meek's recently-released solo album, "Haunted Mountain". With an
+              impressive rating of 7.2, I just HAD to give it a listen (though I
+              usually take Pitchfork's ratings with a grain of salt). This album
+              feels almost like an extension of his band's work, something I
+              would never disapprove of. This is my favorite track so far, the
+              title track is also really good. Give this one a listen and please
+              listen to the whole album if you're into it!! Make it a great
+              week.
             </p>
           </div>
         </div>
@@ -539,6 +542,11 @@
               <td>55</td>
               <td>Cattails - Big Thief</td>
               <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>56</td>
+              <td>Clean - Taylor Swift</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
