--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 57: Cyclades - Buck Meek
+          Week 58: Ice Slippin - Omar Apollo
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.4/10</h2>
+            <h2 id="rating">Overall Rating 9.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5bm4mWrTL3LAewRDiTMQel?si=9c85f1f4f05c4a9b"
+                    href="https://open.spotify.com/track/7BWN70acf9J6f37SCNNCCQ?si=2be4b1ac348b46f2"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=njKwzygKaRY"
+                    href="https://www.youtube.com/watch?v=Lw4AMr_jdd4"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I've never actually heard Buck Meek sing solo until this very
-              song, yet I've seen him play in person for his band Big Thief.
-              This voice of his is not something I would've expected from him by
-              first glance but it makes me smile a lot when I think about it. He
-              also talks about Siskyou and Shasta county in this song!
+              I think my favorite part of this song is the pacing of the
+              production. It starts with a mellow, atmospherical production of
+              minimal piano and vocals, followed by percussion and other deep
+              production. This punchy percussion kind of fades in and out
+              through the rest of the song in a perfect way to accentuate Omar
+              Apollo's powerful vocals.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Last night Google News greeted me with Pitchfork's review of Buck
-              Meek's recently-released solo album, "Haunted Mountain". With an
-              impressive rating of 7.2, I just HAD to give it a listen (though I
-              usually take Pitchfork's ratings with a grain of salt). This album
-              feels almost like an extension of his band's work, something I
-              would never disapprove of. This is my favorite track so far, the
-              title track is also really good. Give this one a listen and please
-              listen to the whole album if you're into it!! Make it a great
-              week.
+              With this single release this week from Omar Apollo, I think he
+              has secured the title of favorite up-and-coming artist for me. Not
+              to say he isn't popular and hasn't had huge successes already, but
+              I feel he is a rapidly developing artist with a shifting sound
+              that will eventually become something really incredible. His last
+              two singles have truly blown me away and I cannot wait for the
+              forth-conming EP that this track is headlining. Give this one a
+              listen and make it a great week!
             </p>
           </div>
         </div>
@@ -547,6 +547,11 @@
               <td>56</td>
               <td>Clean - Taylor Swift</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>57</td>
+              <td>Cyclades - Buck Meek</td>
+              <td>8.4/10</td>
             </tr>
           </table>
         </div>
