--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 58: Ice Slippin - Omar Apollo
+          Week 59: Johnny - Faye Webster
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.6/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7BWN70acf9J6f37SCNNCCQ?si=2be4b1ac348b46f2"
+                    href="https://open.spotify.com/track/5tuBenbZ1Or9xENTyOKoGC?si=949f21b8188e4eb6"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=Lw4AMr_jdd4"
+                    href="https://www.youtube.com/watch?v=bXHtxctBwEM"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I think my favorite part of this song is the pacing of the
-              production. It starts with a mellow, atmospherical production of
-              minimal piano and vocals, followed by percussion and other deep
-              production. This punchy percussion kind of fades in and out
-              through the rest of the song in a perfect way to accentuate Omar
-              Apollo's powerful vocals.
+              Faye Webster's voice is one of my favorites in the whole wide
+              world. The lyrics in this one are rather tragic yet she sings them
+              with the calmness and easiness of acceptance. The assortments of
+              stringed instruments and brass that comprise this track's
+              production flow very nicely with her smooth voice.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              With this single release this week from Omar Apollo, I think he
-              has secured the title of favorite up-and-coming artist for me. Not
-              to say he isn't popular and hasn't had huge successes already, but
-              I feel he is a rapidly developing artist with a shifting sound
-              that will eventually become something really incredible. His last
-              two singles have truly blown me away and I cannot wait for the
-              forth-conming EP that this track is headlining. Give this one a
-              listen and make it a great week!
+              Faye Webster's album "Atlanta Millionaires Club" from 2019 is one
+              of the very few albums that I consider to be perfect. Every song
+              on this short 10-song tracklist has had its moment in the sun for
+              me, with "Johnny" being my current obsession. I will admit, I must
+              be in a certain mood to listen to these somber songs, but man are
+              they good when you want something of that sort. Give this one a
+              listen when you need to hear something a little sad or just don't
+              listen to the lyrics. Either way, make it a great week!
             </p>
           </div>
         </div>
@@ -552,6 +551,11 @@
               <td>57</td>
               <td>Cyclades - Buck Meek</td>
               <td>8.4/10</td>
+            </tr>
+            <tr>
+              <td>58</td>
+              <td>Ice Slippin - Omar Apollo</td>
+              <td>9.6/10</td>
             </tr>
           </table>
         </div>
