--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 59: Johnny - Faye Webster
+          Week 60: Gentle Heart - Nabihah Iqbal
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 8.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5tuBenbZ1Or9xENTyOKoGC?si=949f21b8188e4eb6"
+                    href="https://open.spotify.com/track/1OFjWqPsPZ2rJLrfPPcvka?si=852c5608febf4e91"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=bXHtxctBwEM"
+                    href="https://www.youtube.com/watch?v=nHH_bTg5b_E"
                     target="_blank"
                     ><center>
                       <img
@@ -141,22 +141,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Faye Webster's voice is one of my favorites in the whole wide
-              world. The lyrics in this one are rather tragic yet she sings them
-              with the calmness and easiness of acceptance. The assortments of
-              stringed instruments and brass that comprise this track's
-              production flow very nicely with her smooth voice.
+              The production is, of course, the star of this song. I love the
+              flowing synths that are present throughout the song. I especially
+              enjoy the synth-overloaded instrumental bridge in the middle of
+              this track.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Faye Webster's album "Atlanta Millionaires Club" from 2019 is one
-              of the very few albums that I consider to be perfect. Every song
-              on this short 10-song tracklist has had its moment in the sun for
-              me, with "Johnny" being my current obsession. I will admit, I must
-              be in a certain mood to listen to these somber songs, but man are
-              they good when you want something of that sort. Give this one a
-              listen when you need to hear something a little sad or just don't
-              listen to the lyrics. Either way, make it a great week!
+              This is the first album of Iqbal's that I have been graced with.
+              Her album "Dreamer" is something truly special in the realm of
+              electronic pop. This particular track is one of the more
+              approachable, pop-oriented songs. It's an easy listen, but be
+              careful, you WILL want to dance. Play this one on the dancefloor
+              and, as always, make it a great week!
             </p>
           </div>
         </div>
@@ -556,6 +553,11 @@
               <td>58</td>
               <td>Ice Slippin - Omar Apollo</td>
               <td>9.6/10</td>
+            </tr>
+            <tr>
+              <td>59</td>
+              <td>Johnny - Faye Webster</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
