--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 60: Gentle Heart - Nabihah Iqbal
+          Week 61: Agora Hills - Doja Cat
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -66,7 +66,7 @@
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1OFjWqPsPZ2rJLrfPPcvka?si=852c5608febf4e91"
+                    href="https://open.spotify.com/track/7dJYggqjKo71KI9sLzqCs8?si=6c23bd978406467d"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=nHH_bTg5b_E"
+                    href="https://www.youtube.com/watch?v=0c66ksfigtU"
                     target="_blank"
                     ><center>
                       <img
@@ -141,19 +141,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The production is, of course, the star of this song. I love the
-              flowing synths that are present throughout the song. I especially
-              enjoy the synth-overloaded instrumental bridge in the middle of
-              this track.
+              Bedroom pop voice!! I love this new sound from Doja Cat, it's more
+              of a one-off rather than a new sound entirely but you can tell she
+              had a lot of fun on this track and I have a lot of fun listening
+              to it so there we go!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This is the first album of Iqbal's that I have been graced with.
-              Her album "Dreamer" is something truly special in the realm of
-              electronic pop. This particular track is one of the more
-              approachable, pop-oriented songs. It's an easy listen, but be
-              careful, you WILL want to dance. Play this one on the dancefloor
-              and, as always, make it a great week!
+              After lots of buzz and controversy over one of my favoirte pop
+              artists, Doja Cat returned with her new album "Scarlet" this
+              Friday. I thoroughly enjoyed the mix of rap and R&B that this
+              album had to offer, but this silly bedroom pop song (reminiscent
+              of my girls Coco and Clair Clair) really stuck with me. Give this
+              one a listen and make it a great week!
             </p>
           </div>
         </div>
@@ -187,7 +187,7 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Kinzey: Pasture Child - Dominic Fike
+            Ayesha Malick: Luxurious - Gwen Stefani
           </h2>
           <div class="row">
             <div class="column">
@@ -198,7 +198,7 @@
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5APPlPgagEAXjGLIizqSDS?si=79a95e5a588a48d9"
+                    href="https://open.spotify.com/track/3UQmoVQJqBYauTZLVPs3uo?si=f633ced1e42f4852"
                     target="_blank"
                     ><center>
                       <img
@@ -212,7 +212,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=BuUHgchnPJw"
+                    href="https://www.youtube.com/watch?v=vIhlZKxi8AU"
                     target="_blank"
                     ><center>
                       <img
@@ -229,18 +229,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I’ve recently been listening to Dominic Fike’s new album on repeat
-            (especially since I saw him in concert!). I could have chosen
-            virtually any song from this album to be my song of the week, but I
-            have a particular love for this one lately. The play-on-words title
-            refers to a childhood crush or lover who is said to have had a
-            sheltered upbringing, but grows up to do big things. Fike reminisces
-            about that relationship in a time before their lives became more
-            complicated, and he introduces an additional sentiment about the way
-            that technology has impacted our lives and interactions with others.
-            The production has a lot of subtle detail, and I really love the
-            guitar parts throughout this whole album. I find this song really
-            sweet and the lyrics always make me smile.
+            I was never a big Gwen Stefani girl but for some reason when I
+            rediscovered this song a few days ago, I have NOT been able to stop
+            listening to it. Something about it is so catchy, so classically
+            y2k—I love it. I also love the parallels she draws between
+            materialistic opulence and the idea of being “rich” in love. It
+            reminds me of the grandiose that characterized the Roaring Twenties,
+            one of my favorite eras in history!
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -558,6 +553,11 @@
               <td>59</td>
               <td>Johnny - Faye Webster</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>60</td>
+              <td>Gentle Heart - Nabihah Iqbal</td>
+              <td>8.1/10</td>
             </tr>
           </table>
         </div>
