spelling error fixed

--- a/songs.html
+++ b/songs.html
@@ -551,7 +551,7 @@
             </tr>
             <tr>
               <td>59</td>
-              <td>Johnny - Faye Webster</td>
+              <td>Jonny - Faye Webster</td>
               <td>8.8/10</td>
             </tr>
             <tr>
