--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 61: Agora Hills - Doja Cat
+          Week 62: Alvorada - Cartola
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -66,7 +66,7 @@
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7dJYggqjKo71KI9sLzqCs8?si=6c23bd978406467d"
+                    href="https://open.spotify.com/track/7Bq17tNAUCLceZQOJMnj3D?si=15c9f4bd51b54c57"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=0c66ksfigtU"
+                    href="https://www.youtube.com/watch?v=QFfwRYf3YzE"
                     target="_blank"
                     ><center>
                       <img
@@ -141,19 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Bedroom pop voice!! I love this new sound from Doja Cat, it's more
-              of a one-off rather than a new sound entirely but you can tell she
-              had a lot of fun on this track and I have a lot of fun listening
-              to it so there we go!
+              The starting progression of this song from a simple drum into an
+              overabundance of all kinds of percussion is my favorite! I love
+              the way this song feels and sounds throughout, it never gets tired
+              or repetitive (from my limited experience, some samba tracks fall
+              victim to falling flat in the middle).
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              After lots of buzz and controversy over one of my favoirte pop
-              artists, Doja Cat returned with her new album "Scarlet" this
-              Friday. I thoroughly enjoyed the mix of rap and R&B that this
-              album had to offer, but this silly bedroom pop song (reminiscent
-              of my girls Coco and Clair Clair) really stuck with me. Give this
-              one a listen and make it a great week!
+              In my recent conquest to expand the amount of music genres I
+              listen to, I fell in love with the relaxed, Samba sub-genre of
+              Bossa nova. Cartola is famous for his pioneering of Samba, and
+              while this song teteers the line of Samba and Bossa nova, I'm not
+              here to split hairs on something so trivial. This song in
+              particular stands out to me because of its overall progression and
+              sonical storytelling (although I am currently in the dark as far
+              as lyrics go). So give this one a listen, I think it's an easy
+              listen for almost anyone, and make it a great week!
             </p>
           </div>
         </div>
@@ -557,6 +561,11 @@
             <tr>
               <td>60</td>
               <td>Gentle Heart - Nabihah Iqbal</td>
+              <td>8.1/10</td>
+            </tr>
+            <tr>
+              <td>61</td>
+              <td>Agora Hills - Doja Cat</td>
               <td>8.1/10</td>
             </tr>
           </table>
